# pam-signandverify

./: .gitignore  CMakeLists.txt  LICENSE  README.md
frontend/: README.md
pam-module/: CMakeLists.txt
pam-module/docs/: pam_blockchain.conf.example
pam-module/include/: authorized_wallets.h  module_config.h  session_client.h
pam-module/src/: authorized_wallets.c  module_config.c  pam_blockchain_module.c  session_client.c
services/walletconnect-helper/: package.json  tsconfig.json
services/walletconnect-helper/src/: cli.ts  config.ts  index.ts  server.ts  types.ts  walletconnectService.ts
services/walletconnect-helper/src/utils/: deferred.ts
